<resources>
    <string name="app_name">Slim</string>
    <string name="lable">Привыкаем к хорошему</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Info</string>
    <string name="habits">Привычки</string>
    <string name="habit_01">Habit 01</string>
    <string name="habit_02">Habit 02</string>
    <string name="settings">Настройки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Activate">Начать</string>
    <string name="Alarm">Активируем напоминания</string>
    <string name="Notification">Напоминание</string>
    <string name="info">О программе</string>
    <string name="applicationDescription">Худеем навсегда</string>
    <string name="moto">привыкаем к хорошему</string>
    <string name="allow_notifications">Разрешить напоминания</string>
    <string name="notification_sound">Включить звук напоминаний</string>
    <string name="logo_screen_while_loading">Включить заставку</string>
    <string name="display_progress_in_hours">Отображать прогресс в часах</string>
    <string name="notificationsAllowed">Напоминания разрешены</string>
    <string name="soundOn">Звук напоминаний включен</string>
    <string name="logoOn">Заставка во время загрузки включена</string>
    <string name="timeInHoursSet">Отображение прогресса в часах включено</string>
    <string name="timeInDefaultUnit">Отображение прогресса в днях включено</string>
    <string name="notificationHeader">Привыкаем к хорошему</string>
    <string name="notificationsReset">Напоминание обновлено</string>
    <string name="notificationsDeactivated">Все напоминания отключены</string>
    <string name="restartHabit">Начинаем работу над привычкой сначала</string>
    <string name="areYouSure">Вы уверены?</string>
    <string name="areYouSureGoldTitle">Вы уверены, что хотите приостановить работу наб привычкой?</string>
    <string name="areYouSureGoldMessage">Сделав перерыв в работе над привычкой Вы не сможете получить золотую звезду</string>
    <string name="threeHabits">Можно активировать не более трех привычек одновременно</string>
    <string name="allowNotifications">Разрешите напоминания в настройках</string>
    <string name="KeepGoing">Slim 21. Keep going!</string>
    <string name="notificationSetAt">Напоминание установлено на</string>
    <string name="notificationDeactivated">Напоминание отключено</string>
    <string name="habitTrackerReset">Начинаем работу над привычкой сначала</string>
    <string name="restartButton">заново</string>
    <string name="infoLink0">http://sportwiki.to</string>
    <string name="on">ВКЛ</string>
    <string name="off">ВЫКЛ</string>
    <string name="habitActivated">Начинаем работать над привычкой</string>
    <string name="habitResumed">Продолжаем работать над привычкой</string>
    <string name="habitSuspended">Работа над привычкой приостановлена</string>
    <string name="habitGoldSuspended">Непрерывная работа над привычкой остановлена. Прогресс обнулен</string>
    <string name="habitStartToGold">Начинаем работать над "золотой" привычкой 21 день без перерывов</string>
    <string name="congratulationsTitle">Поздравляем!</string>
    <string name="congratulationsYou">Вы уже</string>
    <string name="congratulationsWorkWithHabit">работаете над привычкой</string>
    <string name="congratulationTotal">в сумме </string>
    <string name="congratulationsSilverTextFirst">И это первая серебряная звездочка в Вашей коллекции</string>
    <string name="congratulationsSilverText">И это еще одна серебряная звездочка в Вашей коллекции</string>
    <string name="congratulationsWorkUnbroken">Вы не делали остановок уже</string>
     <string name="congratulationsSilverLeftToGold">и до золотой звездочки осталось всего лишь</string>
    <string name="congratulationsUnbrokenWork">непрерывной работы</string>
    <string name="congratulationsSilverQuestion">Продолжаем работу над привычкой?</string>
    <string name="congratulationsYouManagedToComplete">У Вас появилась хорошая привычка</string>
    <string name="congratulationsYouHaveWorked">Вы усердно и непрерывно трудились над ней</string>
    <string name="congratulationsGoldText">И в Вашей коллекции теперь еще одна золотая звездочка</string>
    <string name="congratulationsGoldTextFirst">И в Вашей коллекции теперь есть первая золотая звездочка</string>
    <string name="congratulationsDontForget">Не забывайте об этой привычке, и Ваша жизнь обязательно станет лучше, а талия тоньше</string>
    <string name="restartProgressCanBeLostSilver">Весь прогресс в работе над этой привычкой будет утерян, а серебряная звездочка будет удалена</string>
    <string name="restartProgressCanBeLostGold">Весь прогресс в работе над этой привычкой будет утерян, а золотая звездочка будет удалена</string>
    <string name="restartProgressCanBeLost">Весь прогресс в работе над этой привычкой будет утерян</string>
    <string name="congratulationsSilverUnbroken">дней не</string>
    <string name="goToCardAction">goToHabit</string>
    <string name="goToMainActivityAction">goToMainActivity</string>
    <string name="actionMainActivity">MainActivityAction</string>
    <string name="buttonOK">ок</string>
    <string name="buttonSave">Сохранить</string>
    <string name="buttonCancel">Отмена</string>
    <string name="lableDetails">подробнее...</string>
    <string name="lableOptional">желательно:</string>
    <string name="notificationSetTime">Установите время напоминания</string>
    <string name="soundOff">Звук напоминаний выключен</string>
    <string name="logoOff">Заставка во время загрузки выключена</string>
    <string name="labelInfo">О программе</string>
    <string name="lableSettings">Настройки</string>
    <string name="begin">Начать</string>
    <string name="resume">Продолжить</string>
    <string name="lableUnbroken">без пауз</string>
    <string name="workWithHabitUnbroken">работы над привычкой\n(без остановок)</string>
    <string name="workWithHabitWithPauses">работы над привычкой\n(с остановками)</string>
    <string name="workWithHabit">работы над привычкой</string>
    <string name="improvementYourself">улучшения себя</string>
    <string name="lableTotal">в сумме</string>
    <string name="lableLeftTo">осталось до</string>
    <string name="lableLeftTo21">остался до</string>
    <string name="days1">день</string>
    <string name="days2_4">дня</string>
    <string name="days0_5_20">дней</string>
    <string name="hours1">час</string>
    <string name="hours2_4">часа</string>
    <string name="hours0_5_20">часов</string>
    <string name="minutes1">минута</string>
    <string name="minutes2_4">минуты</string>
    <string name="minutes0_5_20">минут</string>
    <string name="seconds1">секунда</string>
    <string name="seconds2_4">секунды</string>
    <string name="seconds0_5_20">секунд</string>
<string name="habitName_01">Есть овощи</string>
<string name="habitDescription_01">400–500 г в день</string>
<string name="habitObligatory_01">
\nесть не менее 400 г овощей в день для женщин, и не менее 500 г овощей в день для мужчин
\nделить овощи на 5-7 порций, употреблять их равномерно в течение дня
\nограничить употребление крахмалистых овощей до 100-150 г (картофель, кукуруза, горошек, отварные морковь и свекла)
</string>
    <string name="habitOptional_01">
\nкак можно чаще включать в рацион капусту брокколи. Это один из самых богатых источников полезных веществ
\nчередовать овощи (капуста, морковь, свекла, томаты, перец, шпинат, тыква, огурцы, чеснок, салат, спаржевая фасоль, кабачки, редис, зелень, хрен и др.)
\nесть овощи в сыром, тушеном, печеном, запеченном на гриле, отварном, сушеном виде, в виде добавок в блюда
\nне есть овощи в жареном, маринованном, засоленном виде
\nдобавлять 1-2 чайных ложки клетчатки из пакетиков к основной пище или выпивать то же количество разведенной в стакане воды клетчатки,  если Вы вынуждены пропустить прием овощей
</string>
    <string name="habitKnowledge_01">
\nОсновная польза овощей заключается в том, что они наполняют организм минеральными элементами, витаминами, органическими кислотами, медленными "хорошими" углеводами и клетчаткой. К тому же, большинство овощей способствует правильному пищеварению и нормализации уровня сахара в крови, дают длительное чувство сытости.
\n1 порция овощей  имеет вес около 80 г. Это примерно полстакана приготовленных или измельченных сырых овощей, или 1 стакан листовых овощей. Или примерно один средний помидор, или семь помидоров черри, кусок толстого огурца длиной около пяти сантиметров, три столовых ложки горошка или нарезанной моркови. Это примерно столько, сколько помещается Вам в ладонь.
\nОбычно среднее употребление овощей значительно меньше рекомендуемой нормы. По данным Росстата, в 2014 году среднедушевой показатель по дневному потреблению овощей составил лишь 267 граммов.
</string>
<string name="habitName_02">Высыпаться</string>
<string name="habitDescription_02">спать 7-9 часов</string>
<string name="habitObligatory_02">
\nспать 7-9 часов (в зависимости от индивидуальной потребности)
</string>
<string name="habitOptional_02">
\nложиться спать до 23.00
\nпросыпаться без будильника
\nпроветривать комнату перед сном
\nделать короткую прогулку на свежем воздухе перед сном
\nспать в комнате, куда не проникает свет и посторонние звуки
\nиспользовать маску для сна, если мешает свет
\nпить успокаивающие травяные чаи
\nспать 1 час днем
\nспать немного дольше чем обычно 1-2 раза в неделю (например, в выходные дни)
\nне смотреть телевизор за 30 минут перед сном
\nне заниматься спортом за 2-3 часа до сна
</string>
 <string name="habitKnowledge_02">
\nздоровый сон уберегает от раздражительности и, как следствие, от пищевых срывов.
Также, полноценный сон способствует выработке гормонов радости и сытости (лептин). И в течение дня голод чувствуется меньше
\nпри недосыпании вырабатывается гормон, который повышает аппетит и способствует перееданию (грелин).
Хронический недосып, как правило, приводит к хроническому перееданию
</string>
<string name="habitName_03">Пить воду</string>
<string name="habitDescription_03">6-8 стаканов воды в день</string>
<string name="habitObligatory_03">
\nвыпивать 6-8 стаканов воды в день (в зависимости от индивидуальной потребности и физической активности)
\nвыпивать стакан воды за 10-15 минут до еды, это позволит уменьшить количество съедаемой пищи
\nвыпивать стакан воды при наступлении чувства голода, т.к. часто мы ошибочно принимаем чувство жажды за чувство голода
\nне пить воду (жидкие напитки) во время еды, т.к. это увеличивает количество съеденного и ухудшает пищеварение
\nне пить воду (жидкие напитки) в течение 15 минут после еды, т.к. это ухудшает пищеварение
</string>
 <string name="habitOptional_03">
\nбольшую часть жидкости выпивать до 7-8 вечера, чтобы избежать отечности
\nв перерывах на работе или учебе пить воду вместо чая и кофе
\nснизить употребление крепкого кофе и чая (до 1-2 чашек в день) или крепость этих напитков, т.к. большое количество кофеина вызывает обезвоживание организма
\nупотреблять фильтрованную (подойдет простейший фильтр-кувшин) или кипяченую воду
\nдобавлять в воду несколько капель лимонного сока, это приносит пользу пищеварению и улучшает вкус воды
</string>
<string name="infoTimeToMakeStep">
пришло время сделать первый шаг
</string>
<string name="infoGoodWishes">
Становитесь лучше вместе с нами!
</string>
    <string name="infoGoodWishes2">
Ваш Slim
</string>
</resources>